@@ -1,6 +1,6 @@
 package io.osvaldas.backoffice.infra.configuration.actuator;
 
-import java.util.Collections;
+import java.util.Map;
 
 import org.springframework.boot.actuate.info.Info;
 import org.springframework.boot.actuate.info.InfoContributor;
@@ -11,6 +11,6 @@ public class ActuatorCustomInformation implements InfoContributor {
 
     @Override
     public void contribute(Info.Builder builder) {
-        builder.withDetail("Contribution", Collections.singletonMap("Creator", "Osvaldas Bernatavičius"));
+        builder.withDetail("Contribution", Map.of("Creator", "Osvaldas Bernatavičius"));
     }
 }
